--- a/index.html
+++ b/index.html
@@ -1,238 +1,273 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Paul Stein Notes </title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Paul Stein Notes</title>
 
-  <!-- PapaParse -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+  <!-- PapaParse for reading CSV -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
   <style>
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
-      display: grid;
-      grid-template-columns: 240px 1fr;
+      display: flex;
       height: 100vh;
+      overflow: hidden;
     }
 
     /* Sidebar */
-    aside {
-      background: #f7f7f7;
-      padding: 20px;
-      border-right: 1px solid #ccc;
+    #sidebar {
+      background: #f5f5f5;
+      padding: 1rem;
+      width: 260px;
       overflow-y: auto;
-      transition: transform 0.3s ease;
+      border-right: 1px solid #ddd;
     }
 
-    aside.collapsed {
-      transform: translateX(-100%);
+    #sidebar h2 {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
     }
 
-    main {
-      padding: 20px;
-      overflow-y: auto;
+    #sidebar label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
     }
 
-    h1 { margin-top: 0; }
-
-    .filter-group { margin-bottom: 20px; }
-    label { display: block; margin-bottom: 5px; font-weight: 600; }
-    select, input[type="text"] { width: 100%; padding: 5px; margin-bottom: 10px; }
-
-    #breadcrumbs {
-      font-size: 0.9em;
-      margin-bottom: 15px;
-      color: #555;
-    }
-
-    #breadcrumbs span {
-      cursor: pointer;
-      color: #0066cc;
-    }
-
-    #breadcrumbs span:hover {
-      text-decoration: underline;
-    }
-
-    .record {
-      border-bottom: 1px solid #ddd;
-      margin-bottom: 20px;
-      padding-bottom: 15px;
-    }
-
-    .record-title {
-      font-weight: 700;
-      font-size: 1.1em;
-      margin-bottom: 5px;
-      color: #222;
-    }
-
-    .record-content {
-      font-size: 0.95em;
-      color: #444;
-      line-height: 1.5;
-    }
-
-    .record:last-child { border-bottom: none; }
-
-    /* Mobile hamburger */
-    #toggleSidebar {
-      display: none;
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      background: #0066cc;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      z-index: 1000;
-      cursor: pointer;
+    #sidebar select, #sidebar input {
+      width: 100%;
+      padding: 0.4rem;
+      margin-top: 0.3rem;
+      border: 1px solid #ccc;
       border-radius: 4px;
     }
 
+    /* Main content */
+    #main {
+      flex: 1;
+      padding: 1.5rem;
+      overflow-y: auto;
+    }
+
+    #breadcrumbs {
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+      color: #666;
+    }
+
+    #breadcrumbs a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+
+    #breadcrumbs a:hover {
+      text-decoration: underline;
+    }
+
+    h2 {
+      margin-top: 0;
+      font-size: 1.5rem;
+    }
+
+    .author {
+      color: #666;
+      font-style: italic;
+    }
+
+    section {
+      margin-bottom: 1.5rem;
+    }
+
+    /* Mobile layout */
     @media (max-width: 768px) {
-      body { grid-template-columns: 1fr; }
-      aside { position: fixed; top: 0; left: 0; bottom: 0; width: 240px; z-index: 999; }
-      #toggleSidebar { display: block; }
+      body {
+        flex-direction: column;
+      }
+
+      #sidebar {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #ddd;
+      }
     }
   </style>
 </head>
+
 <body>
+  <!-- Sidebar Filters -->
+  <div id="sidebar">
+    <h2>Filter Readings</h2>
 
-  <button id="toggleSidebar">☰ Filters</button>
+    <label for="dateFilter">Select Date</label>
+    <input type="date" id="dateFilter" />
 
-  <aside>
-    <h2>Filter</h2>
-    <div id="filterContainer"></div>
-  </aside>
+    <label for="yearFilter">Lectionary Year</label>
+    <select id="yearFilter"></select>
 
-  <main>
-    <h1>Paul Stein Notes</h1>
-    <div id="breadcrumbs">Home</div>
-    <input type="text" id="keywordSearch" placeholder="Search Title and Content..." />
-    <div id="recordsContainer"></div>
-  </main>
+    <label for="seasonFilter">Season</label>
+    <select id="seasonFilter"></select>
 
-let records = [];
-let currentFilters = { year: null, season: null, week: null, date: null };
+    <label for="weekFilter">Week</label>
+    <select id="weekFilter"></select>
+  </div>
 
-// Load CSV
-Papa.parse('data/lectionary.csv', {
-  download: true,
-  header: true,
-  complete: function(results) {
-    records = results.data;
-    populateFilters(records);
-    showDefaultWeek();
-  }
-});
+  <!-- Main Content -->
+  <div id="main">
+    <nav id="breadcrumbs"></nav>
+    <div id="main-content">
+      <p>Loading readings...</p>
+    </div>
+  </div>
 
-function populateFilters(data) {
-  const years = [...new Set(data.map(d => d.year))];
-  const seasons = [...new Set(data.map(d => d.season))];
-  const weeks = [...new Set(data.map(d => d.week))];
+  <!-- JavaScript -->
+  <script>
+    let records = [];
+    let currentFilters = { year: null, season: null, week: null, date: null };
 
-  fillSelect('#yearFilter', years);
-  fillSelect('#seasonFilter', seasons);
-  fillSelect('#weekFilter', weeks);
-}
+    Papa.parse("data/paul-stein-conten1.csv", {
+      download: true,
+      header: true,
+      complete: function (results) {
+        records = results.data.filter(r => r.date); // ensure valid rows
+        populateFilters(records);
+        showDefaultWeek();
+      },
+    });
 
-function fillSelect(selector, values) {
-  const select = document.querySelector(selector);
-  select.innerHTML = '<option value="">All</option>' + 
-    values.map(v => `<option value="${v}">${v}</option>`).join('');
-}
+    function populateFilters(data) {
+      const years = [...new Set(data.map((d) => d.year))];
+      const seasons = [...new Set(data.map((d) => d.season))];
+      const weeks = [...new Set(data.map((d) => d.week))];
+      fillSelect("#yearFilter", years);
+      fillSelect("#seasonFilter", seasons);
+      fillSelect("#weekFilter", weeks);
+    }
 
-// ----------  DATE SELECTION  ----------
-document.querySelector('#dateFilter').addEventListener('change', function() {
-  const selectedDate = this.value;
-  const matched = records.find(r => r.date === selectedDate);
-  if (matched) updateFiltersFromRecord(matched);
-});
+    function fillSelect(selector, values) {
+      const select = document.querySelector(selector);
+      select.innerHTML =
+        '<option value="">All</option>' +
+        values.map((v) => `<option value="${v}">${v}</option>`).join("");
+    }
 
-function updateFiltersFromRecord(record) {
-  currentFilters = {
-    year: record.year,
-    season: record.season,
-    week: record.week,
-    date: record.date
-  };
-  document.querySelector('#yearFilter').value = record.year;
-  document.querySelector('#seasonFilter').value = record.season;
-  document.querySelector('#weekFilter').value = record.week;
-  document.querySelector('#dateFilter').value = record.date;
-  renderContent(record);
-  updateBreadcrumbs(record);
-}
+    // ---------- DATE SELECTION ----------
+    document
+      .querySelector("#dateFilter")
+      .addEventListener("change", function () {
+        const selectedDate = this.value;
+        const matched = records.find((r) => r.date === selectedDate);
+        if (matched) updateFiltersFromRecord(matched);
+      });
 
-// ----------  OTHER FILTERS  ----------
-['#yearFilter','#seasonFilter','#weekFilter'].forEach(sel => {
-  document.querySelector(sel).addEventListener('change', function() {
-    const year = document.querySelector('#yearFilter').value;
-    const season = document.querySelector('#seasonFilter').value;
-    const week = document.querySelector('#weekFilter').value;
-    const matched = records.find(r =>
-      r.year === year && r.season === season && r.week === week
-    );
-    if (matched) updateFiltersFromRecord(matched);
-  });
-});
+    function updateFiltersFromRecord(record) {
+      currentFilters = {
+        year: record.year,
+        season: record.season,
+        week: record.week,
+        date: record.date,
+      };
+      document.querySelector("#yearFilter").value = record.year;
+      document.querySelector("#seasonFilter").value = record.season;
+      document.querySelector("#weekFilter").value = record.week;
+      document.querySelector("#dateFilter").value = record.date;
+      renderContent(record);
+      updateBreadcrumbs(record);
+    }
 
-// ----------  DEFAULT WEEK ON PAGE LOAD ----------
-function showDefaultWeek() {
-  const today = new Date().toISOString().split('T')[0];
-  const record = records.find(r => r.date <= today) || records[0];
-  updateFiltersFromRecord(record);
-}
+    // ---------- OTHER FILTERS ----------
+    ["#yearFilter", "#seasonFilter", "#weekFilter"].forEach((sel) => {
+      document.querySelector(sel).addEventListener("change", function () {
+        const year = document.querySelector("#yearFilter").value;
+        const season = document.querySelector("#seasonFilter").value;
+        const week = document.querySelector("#weekFilter").value;
+        const matched = records.find(
+          (r) =>
+            r.year === year && r.season === season && r.week === week
+        );
+        if (matched) updateFiltersFromRecord(matched);
+      });
+    });
 
-// ----------  RENDER CONTENT ----------
-function renderContent(item) {
-  const main = document.querySelector('#main-content');
-  main.innerHTML = `
-    <h2>${item.gospel_title || ''}</h2>
-    <p><em>${item.date} • ${item.season} Week ${item.week}, Year ${item.year}</em></p>
+    // ---------- DEFAULT WEEK ----------
+    function showDefaultWeek() {
+      const today = new Date();
+      const nextSunday = new Date(today);
+      nextSunday.setDate(today.getDate() + ((7 - today.getDay()) % 7 || 7));
+      const nextSundayISO = nextSunday.toISOString().split("T")[0];
 
-    ${item.gospel_content ? `
-      <section class="gospel">
-        <h3>${item.gospel_title}</h3>
-        <p class="author">by ${item.gospel_author}</p>
-        <p>${item.gospel_content}</p>
-      </section>
-    ` : ''}
+      const matched = records.find((r) => r.date === nextSundayISO);
 
-    ${item.commentary_content ? `
-      <section class="commentary">
-        <h3>${item.commentary_title}</h3>
-        <p class="author">by ${item.commentary_author}</p>
-        <p>${item.commentary_content}</p>
-      </section>
-    ` : ''}
+      if (matched) {
+        updateFiltersFromRecord(matched);
+      } else {
+        // fallback: closest earlier record
+        const fallback = records.find((r) => r.date <= nextSundayISO) || records[0];
+        updateFiltersFromRecord(fallback);
+      }
+    }
 
-    ${item.reflection_content ? `
-      <section class="reflection">
-        <h3>${item.reflection_title}</h3>
-        <p class="author">by ${item.reflection_author}</p>
-        <p>${item.reflection_content}</p>
-      </section>
-    ` : ''}
-  `;
-}
+    // ---------- RENDER CONTENT ----------
+    function renderContent(item) {
+      const main = document.querySelector("#main-content");
+      main.innerHTML = `
+        <h2>${item.gospel_title || ""}</h2>
+        <p><em>${item.date} • ${item.season} Week ${item.week}, Year ${item.year}</em></p>
 
-// ----------  BREADCRUMBS ----------
-function updateBreadcrumbs(record) {
-  const breadcrumb = document.querySelector('#breadcrumbs');
-  breadcrumb.innerHTML = `
-    <a href="#" onclick="filterBy('year','${record.year}')">${record.year}</a> ›
-    <a href="#" onclick="filterBy('season','${record.season}')">${record.season}</a> ›
-    <a href="#" onclick="filterBy('week','${record.week}')">Week ${record.week}</a>
-  `;
-}
+        ${
+          item.gospel_content
+            ? `
+          <section class="gospel">
+            <h3>${item.gospel_title}</h3>
+            <p class="author">by ${item.gospel_author}</p>
+            <p>${item.gospel_content}</p>
+          </section>
+        `
+            : ""
+        }
 
-function filterBy(field, value) {
-  const matched = records.find(r => r[field] === value);
-  if (matched) updateFiltersFromRecord(matched);
-}
+        ${
+          item.commentary_content
+            ? `
+          <section class="commentary">
+            <h3>${item.commentary_title}</h3>
+            <p class="author">by ${item.commentary_author}</p>
+            <p>${item.commentary_content}</p>
+          </section>
+        `
+            : ""
+        }
 
+        ${
+          item.reflection_content
+            ? `
+          <section class="reflection">
+            <h3>${item.reflection_title}</h3>
+            <p class="author">by ${item.reflection_author}</p>
+            <p>${item.reflection_content}</p>
+          </section>
+        `
+            : ""
+        }
+      `;
+    }
+
+    // ---------- BREADCRUMBS ----------
+    function updateBreadcrumbs(record) {
+      const breadcrumb = document.querySelector("#breadcrumbs");
+      breadcrumb.innerHTML = `
+        <a href="#" onclick="filterBy('year','${record.year}')">${record.year}</a> ›
+        <a href="#" onclick="filterBy('season','${record.season}')">${record.season}</a> ›
+        <a href="#" onclick="filterBy('week','${record.week}')">Week ${record.week}</a>
+      `;
+    }
+
+    function filterBy(field, value) {
+      const matched = records.find((r) => r[field] === value);
+      if (matched) updateFiltersFromRecord(matched);
+    }
+  </script>
 </body>
 </html>
