Revise filter labels and add new options
Updated labels for filters and added new filter options.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
 
     #breadcrumbs a:hover {
-      text-decoration: underline;
+ar      text-decoration: underline;
     }
 
     h2 {
@@ -104,13 +104,25 @@
     <label for="dateFilter">Select Date</label>
     <input type="date" id="dateFilter" />
 
-    <label for="yearFilter">Lectionary Year</label>
+    <label for="yearFilter">year</label>
     <select id="yearFilter"></select>
 
-    <label for="seasonFilter">Season</label>
+    <label for="seasonFilter">season</label>
     <select id="seasonFilter"></select>
 
-    <label for="weekFilter">Week</label>
+    <label for="weekFilter">week</label>
+    <select id="weekFilter"></select>
+
+    <label for="weekFilter">Sunday</label>
+    <select id="weekFilter"></select>
+
+    <label for="weekFilter">Content Type</label>
+    <select id="weekFilter"></select>
+
+   <label for="weekFilter">Author</label>
+    <select id="weekFilter"></select>
+
+    <label for="weekFilter">Content</label>
     <select id="weekFilter"></select>
   </div>
 
