Fix CSV file path in Papa.parse function

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     let records = [];
 
     // Load CSV file (ensure it exists at data/paul-stein-content1.csv)
-    Papa.parse("data/paul-stein-content1.csv", {
+    Papa.parse("paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function (results) {
