Update CSV file URL to use HTTPS link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     let records = [];
 
     // Load CSV file from root folder
-    Papa.parse("paul-stein-content1.csv", {
+    Papa.parse("https://pwuckpwuck.github.io/paulsteinnotes/paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function(results) {
